# rdr-eval

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: docs.yml
docs/: api.rst  conf.py  getting_started.rst  index.rst
examples/: README.rst  basic_usage.py  gaussian_1d.py  plot_rdr_1d.py  plot_rdr_2d.py
rdr/: __init__.py  core.py
tests/: test_rdr.py
